new branch to replace prev branch with non-ignored datasets
prev branch last commit notes:

Created vignettes that exist as articles on the package site

- Created vignettes and altered `_pkgdown.yml` to arrange them in the Articles drop-down list
- Added sample datasets `fauna` and `surveys` from the normalised datasets in the BIRT repo
- Note: `dev` mode was set in the YAML and a new folder "dev" was created in "./docs/". Site html can be found here.
- Note: Actual site formatting differs from individual vignette htmls. Otsu's thresholding figure image was somehow excluded as well.

--- a/index.Rmd
+++ b/index.Rmd
@@ -30,7 +30,7 @@ knitr::opts_chunk$set(
 
 Install the development version of `biodivercity` from GitHub:
 
-``` {r eval = FALSE}
+``` {r, eval = FALSE}
 # install.packages("devtools")
 devtools::install_github("ecological-cities/biodivercity", ref = "main")
 ```
@@ -40,11 +40,11 @@ devtools::install_github("ecological-cities/biodivercity", ref = "main")
 
 Load the package:
 
-```{r eval = FALSE}
+```{r, eval = FALSE}
 library(biodivercity)
 ```
 
-```{r include = FALSE, eval = TRUE}
+```{r, include = FALSE, eval = TRUE}
 devtools::load_all() # to knit manually w latest changes (not built/installed yet)
 ```
 
