--- a/vignettes/build-model_process-fauna.Rmd
+++ b/vignettes/build-model_process-fauna.Rmd
@@ -3,6 +3,7 @@ title: "Process fauna survey data"
 author: "Author"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+navbar: ~
 vignette: >
   %\VignetteIndexEntry{Process fauna survey data}
   %\VignetteEngine{knitr::rmarkdown}
@@ -18,55 +19,88 @@ knitr::opts_chunk$set(
 
 ## Overview
 
-- `exclude_simulator.R`
-- `filter_obs.R` 
-- `check_taxongrps.R`
-- `sac_extractor.R` 
-- `sptally_extractor.R` 
+- `filter_obs` is a short function for quick subsetting of the large fauna survey dataframe.
+- Surveys missed during the COVID-19 pandemic could have affected the observed species richness and density. `exclude_simulator` can be used to re-sample past surveys in the affected towns to estimate the decrease in species observed.
+- `check_taxongrps`
+- `sptally_extractor` and `sac_extractor` allow users to generate quick summaries of collected fauna data in the forms of mean species richness and species accumulation curves respectively. 
 
 ## Quick subset of fauna survey data
 
 The `filter_obs` function is meant for quick subsetting of fauna survey data and metadata that follows the following formats:
-**ATTN**: Sample datasets required
 
-```{r sample data table, eval = FALSE}
-# chunk params should be "include = FALSE"
+```{r replacement code for vignette, eval = FALSE}
+fauna <- data(fauna)
+surveys <- data(surveys)
 
-data <- data(survey_data)
-
-kable(data, caption = "**Sample survey data format**") %>%
-  kable_styling("striped") %>% scroll_box(width = "100%")
+head(fauna)
+head(surveys)
 ```
 
-```{r sample info table, eval = FALSE}
-# chunk params should be "include = FALSE"
+```{r sample data table, echo = FALSE, message = FALSE}
+# show sample data in kable
 
-info <- data(survey_info)
+library("knitr")
+library("kableExtra")
+library("tidyverse")
 
-kable(info, caption = "**Sample survey info format**") %>%
-  kable_styling("striped") %>% scroll_box(width = "100%")
+load("../data/fauna.RData")
+
+# data <- data(fauna)
+fauna <- fauna_normalised[[1]]
+
+knitr::kable(head(fauna), caption = "**Sample survey data format**") %>%
+  kable_styling("striped", font_size = 10) %>% scroll_box(width = "100%")
 ```
+
+
+```{r sample info table, echo = FALSE, message = FALSE}
+# show sample info in kable
+load("../data/surveys.RData")
+
+# info <- data(surveys)
+surveys <- surveys_normalised[[1]]
+
+knitr::kable(head(surveys), caption = "**Sample survey info format**") %>%
+  kable_styling("striped", font_size = 10) %>% scroll_box(width = "100%")
+```
+
 
 `filter_obs` can be used to easily subset the data with respect to `town`, `round` and/or `priority`. In the context of this package, the parameters `town`, `round` and `priority` refer to the spatial, temporal and taxonomic grouping of the input data. Alternatively, these parameters can also be arbitrarily assigned to any existing groups.
 
-```{r filter_obs, eval = FALSE}
-
-bird <- filter_obs(observations = fauna, survey_ref = surveys,
-                   specify_priority = "Aves")
-butt <- filter_obs(observations = fauna, survey_ref = surveys,
+```{r filter_obs vignette, eval = FALSE}
+butterflies <- filter_obs(observations = fauna, survey_ref = surveys,
                    specify_priority = "Lepidoptera")
-dragon <- filter_obs(observations = fauna, survey_ref = surveys,
-                     specify_priority = "Odonata")
-frog <- filter_obs(observations = fauna, survey_ref = surveys,
-                   specify_priority = "Amphibia")
+tampines <- filter_obs(observations = fauna, survey_ref = surveys,
+                   specify_town = "TP")
+round_2 <- filter_obs(observations = fauna, survey_ref = surveys,
+                     specify_round = "2")
 
+butterflies_tampines_round_2 <- filter_obs(observations = fauna, survey_ref = surveys,
+                   specify_priority = "Lepidoptera",
+                   specify_town = "TP",
+                   specify_round = "2")
+
+head(butterflies_tampines_round_2)
 ```
+
+```{r filter_obs, echo = FALSE, message = FALSE}
+source("../R/filter_obs.R")
+
+butterflies_tampines_round_2 <- filter_obs(observations = fauna, survey_ref = surveys,
+                   specify_priority = "Lepidoptera",
+                   specify_town = "TP",
+                   specify_round = "2")
+
+knitr::kable(head(butterflies_tampines_round_2), caption = "**Observations of *butterflies* in *Tampines* from *2020-2021*.**") %>%
+  kable_styling("striped", font_size = 10) %>% scroll_box(width = "100%")
+```
+
 
 ## Assessing missing data with past records
 
-Surveys during the COVID-19 circuit breaker period (Punggol and Queenstown Survey Round 2, Cycle 5) were not conducted. To examine the effect on the loss in observed species richness and density, surveys at Punggol and Queenstown in Cycle 5 during the previous survey year (Round 1, 2016/17) were randomly excluded from that full year's data. To examine the possible variation in species richness/density, a total of 100 scenarios (bootstrapped repetitions) were made, for the respective number of missed surveys for each taxon:  
+When COVID-19 hit, fauna surveys scheduled within the Circuit Breaker period (Punggol and Queenstown Survey Round 2, Cycle 5) were not conducted. To simulate the effect on the loss in observed species richness and density with less surveys, the same number of surveys were randomly removed from the total survey number conducted during the same window of the previous survey year (Round 1, 2016/17). To examine the possible variation in species richness/density, bootstrapped repetitions were made for the respective number of missed surveys for each taxon.
 
-- e.g. **Aves (birds):** 15 (PG) surveys excluded
+- e.g. **Aves (birds):** 15 (PG) surveys excluded with 100 bootstrapping scenarios
 
 ```{r exclude_simulator, eval = FALSE}
 exclude_bird_pg <- 15
@@ -74,7 +108,6 @@ rep <- 100
 
 set.seed(123)
 
-### BIRD ###
 boot <- exclude_simulator(bird, surveys,
                           exclude_num = exclude_bird_pg, 
                           exclude_level = "survey",
@@ -85,12 +118,13 @@ boot <- exclude_simulator(bird, surveys,
                           cycle_ignore = NULL,
                           rep = rep)
 
-# plot
+# plot boxplot of affected species
 plot_bird <- boot %>%
   pivot_longer(cols = num_range("iter", 1:ncol(boot)), # transform for plotting
                names_to = "iteration", values_to = "n") %>%
   mutate(town = "PG") %>%
   mutate(priority = "Aves")
+
 plot_bird <- plot_bird %>%
   
   # get order
@@ -131,11 +165,38 @@ sp_rich <- sp_rich %>%
   mutate(priority = "Aves") %>%
   mutate(town = "PG")
 
-rm(boot, sp_rich)
+# A function factory for getting integer y-axis values.
+integer_breaks <- function(n = 5, ...) {
+  fxn <- function(x) {
+  breaks <- floor(pretty(x, n, ...))
+  names(breaks) <- attr(breaks, "labels")
+  breaks
+  }
+  return(fxn)
+  }
 
-rm(exclude_bird_pg, rep)
+# plot boxplot of expected species
+sp_rich %>%
+  mutate(priority = factor(priority, levels = c("Aves"))) %>%
 
+  ggplot(aes(x = town, y = n)) +
+    
+    facet_wrap( ~ priority, scales = "free") +
+    
+    geom_point(aes(y = full), shape=4, size=3.0,
+               color = "blue", alpha = 0.2) +
+    geom_boxplot(width=0.2, color="black", alpha=0.2) +
+    stat_summary(fun = mean, geom = "point", shape=5, size=2.0) + #mean value
+  
+    scale_y_continuous(breaks = integer_breaks()) +
+    xlab("") +
+    ylab("No. of species") + 
+    theme_bw() +
+    theme(panel.grid.major.x = element_blank(),
+          panel.grid.minor.y = element_blank())
 ```
+
+![**Regenerate with sample dataset.** Boxplot of no. of species (species richness) at Punggol in the first Survey Round (2016/17), if similar no. of missed surveys were randomly excluded in Cycle 5 (COVID-19 circuit breaker period in Survey Round 2, 2019/20). The blue cross denotes the counts across full dataset, while the diamond symbol denotes the mean counts across the 100 bootstrapped repetitions of scenarios with excluded data.](./images/exclude-sim-sample-plot.png)
 
 ## Checking fauna data entries for repeats or outdated names
 
@@ -143,9 +204,11 @@ rm(exclude_bird_pg, rep)
 
 ## Summarising fauna data entries
 
+To generate summary figures quickly for large survey data accumulated throughout the study period, `sptally_extractor` and `sac_extractor` can calculate the mean species richness and species accumulation curves respectively. `sptally_extractor` can be specific to the point or individual survey levels, while `sac_extractor` is calculated at the broader spatial grouping of `town` to represent surveys as sampling effort. Similar to the `filter_obs` function covered above, the same parameters of `town`, `round` and `priority` can be specified.
+
 ### Stacked bar plots with error
 
-Mean species richness (no. of species) per sampling point and survey, for each town and taxon. To normalise the point density per sampling zone, three surveys were randomly selected at each sampling point (per taxon and round), for 30 bootstrapped repetitions. The error bars denote two standard deviations of the mean across all iterations. Note that the scale of the y-axis varies between the plots.
+An example of the sample dataset summarised with `sptally_extractor` to create a stacked bar plot for each `town` and `priority` (taxon):
 
 ```{r sptally, eval = FALSE}
 # BY POINT
@@ -198,9 +261,11 @@ normalised_perpt <- normalised_perpt %>%
   mutate(round = as.factor(round))
 ```
 
+![Mean species richness (no. of species) per sampling point and survey, for each town and taxon. The error bars denote two standard deviations of the mean across all iterations. Note that the scale of the y-axis varies between the plots.](./images/sample-stacked-bar-plot.png){#id .class width=80% height=80%}
+
 ### Species accumulation curves
 
-Species accumulation curves for each town and taxon, after removal of data to normalise sampling point density. Three surveys were randomly selected at each sampling point (per taxon and round), for 30 bootstrapped repetitions. The mean species richness (line) and two standard deviations of the mean (shaded region) across all iterations are shown. Note that the scale of the y-axis varies between taxa.
+An example of the sample dataset summarised with `sac_extractor` to create a species accumulation curve for each `town` and `priority` (taxon):
 
 ```{r sac, eval = FALSE}
 
@@ -242,3 +307,5 @@ plot_sac <- plot_sac %>%
             sd = sd(richness, na.rm = TRUE))
 
 ```
+
+![Species accumulation curves compare total, or ‘gamma’, diversity for the total sampling area, while accounting for differences in sampling effort. The mean species richness (line) and two standard deviations of the mean (shaded region) across all iterations are shown. Note that the scale of the y-axis varies between taxa.](./images/sac-sample-plot.png){#id .class width=80% height=80%}
